name:          double-conversion
version:       2.0.2.0
synopsis:      Efficient binary-decimal and decimal-binary conversion routines for IEEE doubles.
license:       BSD3
license-file:  LICENSE
copyright:     2011 MailRank, Inc., 2012-2016 Bryan O'Sullivan, 2017-2018 DFINITY Stiftung
author:        Bryan O'Sullivan <bos@serpentine.com>
maintainer:    Enzo Haussecker <enzo@dfinity.org>
stability:     Experimental
category:      Text
homepage:      https://github.com/dfinity/hs-double-conversion
bug-reports:   https://github.com/dfinity/hs-double-conversion/issues
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base == 4.*,
    bytestring,
    ghc-prim,
    text >= 0.11.0.8
  c-sources:
    cbits/hs-double-conversion.cc
  cc-options:
    -std=c++11
  exposed-modules:
    Data.Double.Conversion.ByteString
    Data.Double.Conversion.Text
  extra-libraries: mozglue
  if os(windows)
    if arch(x86_64)
      extra-libraries: stdc++-6 gcc_s_seh-1
    else
      extra-libraries: stdc++-6 gcc_s_dw2-1
  else
    if os(darwin)
      extra-libraries: c++
    else
      extra-libraries: stdc++
  ghc-options: -Wall
  include-dirs:
    include
  other-modules:
    Data.Double.Conversion.FFI

test-suite double-conversion-tests
  build-depends:
    HUnit,
    base,
    bytestring,
    double-conversion,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    text
  ghc-options: -Wall
  hs-source-dirs: tests
  main-is: Properties.hs
  other-modules: Regressions
  type: exitcode-stdio-1.0
